// base.proto
// protoc -I=./ --cpp_out=./ ./base.proto

syntax = "proto3";

package Open;



enum MessageType
{
    MT_UNKNOW                         = 0;

    MT_LOGIN                          = 1000;
    MT_LOGOUT                         = 1001;
}

message MessageHeader
{
    MessageType Type = 1;
    string TransmissionID = 2;
}
